chore: add CI pipeline, static analysis, and code style tooling

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,10 @@
-# Dependencies
 /vendor/
-
-# Composer
-composer.lock
-
-# PHPUnit
+/coverage/
 .phpunit.cache/
 .phpunit.result.cache
-coverage/
-coverage.xml
-package.xml
-
-# Cache
-/cache/
-*.cache
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Environment
+.phpstan.cache/
+.php-cs-fixer.cache
+composer.lock
 .env
-.env.local
-.env.*.local
+.DS_Store
+.idea/
