--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "nyholm/psr7-server": "^1.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64",
         "mikey179/vfsstream": "^1.6",
+        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^10.5"
     },
     "autoload": {
@@ -35,7 +37,11 @@
         "test:feature": "vendor/bin/phpunit --testsuite=Feature",
         "test:security": "vendor/bin/phpunit --testsuite=Security",
         "test:all": "vendor/bin/phpunit",
-        "test:coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test:coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "analyse": "vendor/bin/phpstan analyse",
+        "cs": "vendor/bin/php-cs-fixer fix --dry-run --diff",
+        "cs:fix": "vendor/bin/php-cs-fixer fix",
+        "ci": ["@cs", "@analyse", "@test"]
     },
     "config": {
         "sort-packages": true
