fix: resolve PHPStan level 9 errors

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,3 +3,6 @@ parameters:
     paths:
         - src
     tmpDir: .phpstan.cache
+    ignoreErrors:
+        # Explicit string casts from mixed are intentional type assertions
+        - identifier: cast.string
